tests/expectations/compiler/structs/inline_member_pass.out
DCE_ENABLED:
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'let'
    --> compiler-test:7:19
     |
   7 |     function main(let x: u8, y: bool) -> bool {
     |                   ^^^
DCE_DISABLED:
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'let'
    --> compiler-test:7:19
     |
   7 |     function main(let x: u8, y: bool) -> bool {
     |                   ^^^